--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="filtros">
                 <p>Ordenar por:</p>
-                <select>
+                <select class="filtros-dropdown">
                     <option value="precio">Precio</option>
                     <option value="antiguedad">Marca</option>
                     <option value="popularidad">Popularidad</option>
